--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
               run: node app.js
     my-second-job:
         runs-on: ubuntu-latest
+        needs: my-first-job
         steps:
             - name: Print all System Info
               run: |
